# CapibaraEngine

./: .gitignore  CMakeLists.txt  CodeRules.txt  How it's working.txt  README  license.txt  main.cpp
.cache/clangd/index/: Singleton.cpp.D6C2D638EC552094.idx  Singleton.hpp.9D43A193770E03DB.idx  filler.cpp.8D00EEF9D89F8200.idx  filler.hpp.7D76A3FBAC69CCE5.idx  logs.cpp.830EF69E77328B5A.idx  logs.hpp.C715A8480BD87C4D.idx  main.cpp.2E7DABBD6C7D6BA3.idx  main.cpp.AFF821D63BE96D25.idx  multistructs.cpp.3FF2E65622B46EFB.idx  multistructs.hpp.8B690218AD9442DF.idx  render.cpp.793DF195D0CEFF1C.idx
.github/workflows/: cmake-multi-platform.yml
core/: CMakeLists.txt  Engine.cpp  Engine.hpp  engine.cpp  engine.h  engine.hpp  filler.cpp  logs.cpp  logs.h  loopAsync.cpp  loopMain.cpp
core/DP_general/: CMakeLists.txt  logs.hpp  multistructs.cpp  multistructs.hpp
core/designpatterns/: CMakeLists.txt  Singleton.cpp  Singleton.hpp  multistructs.cpp  multistructs.hpp
core/entity/: CMakeLists.txt  hitboxedObject.cpp  hitboxedObject.hpp
core/entityBase/: CMakeLists.txt  object.hpp
core/event/: CMakeLists.txt  clickObject.cpp  clickObject.h  mouseObject.cpp  mouseObject.h
core/event_TODO/: Event.cpp
core/events/: CMakeLists.txt  eventManager.cpp  eventManager.hpp
core/example/: CMakeLists.txt  example.cpp  example.h  example.hpp  exmaple.h
core/general/: CMakeLists.txt  Json.cpp  Json.hpp  Logs.cpp  Logs.hpp  Settings.cpp  Settings.cpp_TODO  Settings.h  Settings.hpp  Settings.hpp_TODO  Singleton.hpp  Win.cpp  Win.hpp  json.cpp  json.h  logs.cpp  logs.h  positionObject.h  settings.cpp  settings.h  structs.cpp  structs.h
core/log/: CMakeLists.txt  logs.cpp  logs.h
core/networking/: CMakeLists.txt  server.cpp  server.hpp  shared.cpp  shared.hpp
core/networking_TODO/: CMakeLists.txt  server.cpp  shared.cpp
core/render/: Button.cpp  Button.hpp  CMakeLists.txt  Image.cpp  Image.h  Image.hpp  RenderObject.cpp  RenderObject.hpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  button.h  renderManager.cpp  renderManager.hpp  renderObject.cpp  renderObject.h  renderObject.hpp  scene.hpp  textureManager.cpp  textureManager.h
core/system_TODO/: OS.hpp  Win.cpp  Win.hpp
core/threadpool_TODO/: CMakeLists.txt
core/world/: Button.cpp  CMakeLists.txt  button.h  map.cpp  map.h  node.cpp  node.h  playerManager.cpp  playerManager.h  quadTree.cpp  quadTree.h  renderManager.cpp  renderManager.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
games/: CMakeLists.txt
games/Fallen_Demon_Slayers/: CMakeLists.txt  main.cpp
games/Fallen_Demon_Slayers/src/: CMakeLists.txt  testMap.cpp  testMap.h
games/Fallen_Demon_Slayers/src/GUI/: CMakeLists.txt  MainMenu.cpp  MainMenu.h  MainMenu.hpp  mainMenu.cpp  mainMenu.h  testMap.cpp  testMap.h
games/blabla/: CMakeLists.txt  main.cpp
games/shapes/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
tests/: CMakeLists.txt
tests/CapibaraTEst/: CMakeLists.txt  main.cpp
tests/TestFileIO/: CMakeLists.txt  main.cpp
tests/exampleTest/: CMakeLists.txt  main.cpp
tests/example_gTest/: CMakeLists.txt
tests/gTestsExample/: CMakeLists.txt  test_test.cc  test_test.cpp
tests/jsonTests/: CMakeLists.txt  main.cpp
tests/networkingTest/: CMakeLists.txt  main.cpp
tests/steamsdkTest/: CMakeLists.txt  main.cpp
tests/winTests/: CMakeLists.txt
